@@ -217,9 +217,6 @@ C integer nzero(3)      : Auxiliary array with zeros, to call efield
 C real*4  rhoatm(ntpl)  : Harris electron density
 C real*4  rhopcc(ntpl)  : Partial-core-correction density for xc
 C real*4  DRho(ntpl)    : Selfconsistent electron density difference
-C real*4  DVxcdn(ntpl,nspin,nspin): Derivatice of exchange-correlation
-C                         potential respect charge density (see forhar.f)
-C                         DVxcdn(ip,spin1,spin2) = D Vxc(spin2) / D n(spin1)
 C real*8  rhotot        : Total density at one point
 C real*8  rmax          : Maximum orbital radius
 C logical samesh        : Same mesh of last call?
@@ -252,12 +249,12 @@ C
       real(grid_p), dimension(:), pointer, save :: rhopcc, rhoatm, Vna
       real(grid_p), dimension(:),     pointer   :: Vaux
       real(grid_p), dimension(:,:),   pointer   :: DRho, Vscf
-      real(grid_p), dimension(:,:,:), pointer   :: DVxcdn
       real(grid_p), dimension(:),     pointer   :: Chlocal, Totchar
 !
 !     Dummy arrays for cellxc call
 !
       real(grid_p) ::  aux3(3,1)
+      real(grid_p), dimension(1,1,1)  :: DVxcdn_dummy
 
       real(dp)
      .  bcell(3,3), b1Xb2(3), cell(3,3), const,
@@ -307,7 +304,7 @@ C Start time counter
 
       if (frstme) then
         nullify(Vna,rhoatm,rhopcc)
-        nullify(vaux,vscf,DRho,DVxcdn)
+        nullify(vaux,vscf,DRho)
         nullify(chlocal,totchar)
         if (Node.eq.0) then
           harrisfun = fdf_boolean('Harris_functional',.false.)
@@ -440,11 +437,6 @@ C Allocate local memory
       call re_alloc( Vscf, 1, ntpl, 1, nspin, name='Vscf',
      &               routine='dhscf' )
       call re_alloc( Vaux, 1, ntpl, name='Vaux', routine='dhscf' )
-      call re_alloc( DVxcdn, 1, ntpl, 1, nspin, 1, nspin, name='Vaux',
-     &               routine='dhscf' )
-
-C Initialization of DVxcdn
-      DVxcdn(1:ntpl,1:nspin,1:nspin) = 0.0_grid_p 
 
       if (.not.samexa) then
 C ----------------------------------------------------------------------
@@ -753,7 +745,7 @@ C ----------------------------------------------------------------------
       enddo
 
       call cellxc( 0, 0, cell, ntml, ntml, ntpl, 0, aux3, nspin, DRho, 
-     .             Ex, Ec, DEx, DEc, Vscf, DVxcdn, stressl )
+     .             Ex, Ec, DEx, DEc, Vscf, DVxcdn_dummy, stressl )
 
       do ispin = 1,nspin
         call reord(DRho(1,ispin),DRho(1,ispin),nml,nsm,-1)
